tests/e2e/semantics/mutation/list_substring_args.error
Error: syntax error in story at line 2, column 5

2|    b = a substring start:1
          ^^^^^^^^^^^

E0117: Invalid mutation `substring`
