tests/e2e/semantics/mutation/list_substring_args.story
a = [1]
b = a substring start:1
